# DRF-practice

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: typing.yml
main/: admin.py  local_messages.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_message_user.py  0003_alter_message_user.py
practice/: settings.py  urls.py
