[tool.poetry]
name = "drf-practice"
version = "0.1.0"
description = "Stuff while learning DRF"
authors = ["TheArtur128"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^24.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.9.0"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
exclude = ["main/migrations", "manage.py"]

[tool.django-stubs]
django_settings_module = "practice.settings"
